Add XML parser, Growl notifications

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "animate";
+@import "growlyflash";
 
 //body {
 //  background: #FFFFFF;
